[package]
name = "scaling-octo-giggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.6.0"

[dependencies]
anyhow = "1.0.51"
nanoid = "0.4.0"
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.1"
